apps/juice-shop/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop
  labels:
    app.kubernetes.io/name: juice-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: juice-shop
  template:
    metadata:
      labels:
        app.kubernetes.io/name: juice-shop
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: juice-shop
          image: 479858123318.dkr.ecr.ap-southeast-1.amazonaws.com/devsecops-demo/juice-shop
          ports:
            - containerPort: 3000
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          readinessProbe:
            httpGet: { path: /rest/admin/application-version, port: http }
            initialDelaySeconds: 20
          livenessProbe:
            httpGet: { path: /, port: http }
            initialDelaySeconds: 30
          resources:
            requests: { cpu: 100m, memory: 256Mi }
            limits: { cpu: "1", memory: 768Mi }
