apps/juice-shop/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
spec:
  selector:
    app.kubernetes.io/name: juice-shop
  ports:
    - name: http
      port: 80
      targetPort: http
