apps/juice-shop/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: juice-shop
spec:
  to:
    kind: Service
    name: juice-shop
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
